--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.DEPLOY_TOKEN }}
-          external_repository: dharun-karthik/dharun.github.io
+          external_repository: dharun-karthik/dharun-karthik.github.io
           publish_branch: main
           publish_dir: ./dist
           user_name: 'github-actions[bot]'
